  * debchange: add comment to manpage about building sponsored uploads
    (Closes: #321960)
  * debchange: allow creation of changelogs / NEWS files (Closes: #220755,
    #322716)
  * debchange: allow option (--nomultimaint) to not use this
    multi-maintainer changelog format
  * debsign: fix noecho behaviour for interrupted gpg call (Closes:
    #321684)
  * wnpp-alert: RFA -> RFH (Closes: #321707)

 -- Julian Gilbey <jdg@debian.org>  Sun, 14 Aug 2005 18:25:12 +0100

devscripts (2.9.4) unstable; urgency=low

  [ Julian Gilbey ]
  * bts: fix forwarded command (Closes: #320703)
  * debchange: un-html-ise bug titles when using --closes

  [ Joey Hess ]
  * bts: Support new block and unblock commands.

 -- Joey Hess <joeyh@debian.org>  Wed,  3 Aug 2005 22:13:47 -0400

devscripts (2.9.3) unstable; urgency=low

  [ Filippo Giunchedi ]
  * added deb-reversion by martin f krafft (Closes: #284642)
  * modified Makefile to handle docbook-generated manpages and build-depend on
    xsltproc + docbook-xsl

  [ Joey Hess ]
  * Fix suggests on subversion.
  * Other cleanups to references to revision control programs.

  [ Joshua Kwan ]
  * debchange: Fix dch -D behavior by adding some parentheses. closes: #319687
  * Add French manual pages, thanks to the French l10n team. closes: #292780

  [ Julian Gilbey ]
  * bts: support for notfound command (Closes: #320569)
  * debchange: change --closes command output format to place "(Closes:
    #nnnnn)" at end of changelog entry
  * debchange: don't require changelog to be modified when -e or -r option
    used

 -- Julian Gilbey <jdg@debian.org>  Sun, 31 Jul 2005 14:50:10 +0100

devscripts (2.9.2) unstable; urgency=low

  [ Julian Gilbey ]
  * debcommit: fix recognition of cvs trees

  [ Joey Hess ]
  * bts: Fix over-broad cgi url mangling to avoid mangling urls that are part
    of bug reports.
  * bts: fix retitle command, broken by extra param change in 2.9.
    Closes: #319367
