@@ -269,8 +269,7 @@ uploading it to Debian.
 .SH OPTIONS
 .TP
 .B \-\-report, \-\-no\-download
-Only report about newer or absent versions but do not download
-anything.
+Only report about available versions but do not download anything.
 .TP
 .B \-\-download
 Report and download.  (This is the default behaviour.)
