@@ -15,6 +15,7 @@ devscripts (2.9.5) UNRELEASED; urgency=low
     multi-maintainer changelog format
   * debsign: fix noecho behaviour for interrupted gpg call (Closes:
     #321684)
+  * uscan: --report actually reports useful information (Closes: #313323)
   * wnpp-alert: RFA -> RFH (Closes: #321707)
 
  -- Julian Gilbey <jdg@debian.org>  Sun, 14 Aug 2005 18:25:12 +0100
